# the-todo-way-be

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: api-conventions.mdc  architecture.mdc  database.mdc  python-standards.mdc
alembic/: env.py
app/: main.py
app/api/v1/: __init__.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py
app/schemas/: __init__.py  response.py
app/services/: __init__.py
docs/: build-guide.md  lld-backend.md
tests/: conftest.py
